--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
             <p>See you on the day of the result</p>
             <div class="d-flex coordinator align-items-center">
               <div class="mr-4">
-                <img src="ac.png" alt="Image" class="img-fluid">
+                <img src="adi.png" alt="Image" class="img-fluid">
               </div>
               <span>Good Luck, Padawan <br>And thanks. Thanks for playing my game.<br>
                <span class="text-white">Aditya Chaudhary <br> TheFallen1</span> <br>/Hunt Master</span>
