--- a/index.html
+++ b/index.html
@@ -204,6 +204,17 @@
             </div>
           </div>
 
+          <div class="col-md-6 col-lg-4 mb-5 mb-lg-5" data-aos="fade-up" data-aos-delay="300">
+            <div class="testimony text-center">
+              
+                <img src="goodjob.gif" alt="Image" class="img-fluid">
+              
+              <blockquote>
+                <p class="author mb-0">Good Job</p>
+              </blockquote>
+            </div>
+          </div>
+
         </div>
 
 
