--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           <div class="col-12 col-md-10 d-none d-xl-block">
             <nav class="site-navigation position-relative text-right" role="navigation">
               <ul class="site-menu js-clone-nav mx-auto d-none d-lg-block">
-                <li><a href="https://cyptixhunt.co">Home</a></li>
+                <li><a href="https://lifedeathpuzzles.co.vu">Home</a></li>
                 <li class="active"><a href="index.html">The Easter Egg</a></li>
                 
               </ul>
